<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:background="@android:color/white"
        android:layout_height="fill_parent">

        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/image_logo"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40dp"
                    android:text="@string/app_name_1"
                    android:textColor="@color/title_gray"
                    android:id="@+id/txt_app_name_1"
                    android:layout_weight="1"
                    android:gravity="right" />

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:id="@+id/image_dot"
                    android:layout_margin="3dp"
                    android:background="@drawable/rounded_dot"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title_gray"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40dp"
                    android:text="@string/app_name_2"
                    android:id="@+id/txt_app_name_2"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <EditText
                android:layout_width="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"
                android:paddingLeft="80dp"
                android:textColor="@color/title_gray"
                android:background="@drawable/bg_username"
                android:id="@+id/edit_username" />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/title_gray"
                android:paddingLeft="80dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/bg_password"
                android:id="@+id/edit_password" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@android:color/white"
                android:background="@drawable/selector_btn_login"
                android:text="@string/btn_login"
                android:id="@+id/btn_login" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
