<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="LauncherActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.8"
            android:gravity="center_horizontal|bottom">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/image_logo"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40dp"
                    android:text="@string/app_name_1"
                    android:textColor="@color/title_gray"
                    android:id="@+id/txt_app_name_1"
                    android:layout_weight="1"
                    android:gravity="right" />

                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:id="@+id/image_dot"
                    android:layout_margin="3dp"
                    android:background="@drawable/rounded_dot"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title_gray"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40dp"
                    android:text="@string/app_name_2"
                    android:id="@+id/txt_app_name_2"
                    android:layout_weight="1" />
            </LinearLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/title_gray"
                android:gravity="center"
                android:text="@string/launcher_text"
                android:id="@+id/txt_launcher"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom"
            android:layout_weight="1.3">

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
